# r-hyprconfig

./: .SRCINFO  .devenv.yaml  .envrc  .gitignore  CLAUDE.md  Cargo.toml  DEMO.md  Dockerfile  FEATURES.md  PKGBUILD  PKGBUILD-git  README.md  RELEASE_NOTES.md  SCREENSHOT_GUIDE.md  TESTING_REPORT.md  flake.nix  justfile  shell.nix
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/2025-07-25-multi-platform-support/: spec.md  tasks.md
.agent-os/specs/2025-07-25-multi-platform-support/sub-specs/: api-spec.md  database-schema.md  technical-spec.md  tests.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/r_hyprconfig/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html
docs/r_hyprconfig/app/: enum.AppState.html  enum.FocusedPanel.html  index.html  sidebar-items.js  struct.App.html
docs/r_hyprconfig/batch/: enum.BatchOperationType.html  index.html  sidebar-items.js  struct.BatchExecutionResult.html  struct.BatchManager.html  struct.BatchOperation.html  struct.BatchProfile.html  trait.ConfigBatchExt.html
docs/r_hyprconfig/commands/: enum.CommandResult.html  index.html  sidebar-items.js  struct.ActionCommand.html  struct.BatchDialogCommand.html  struct.CommandContext.html  struct.CommandDispatcher.html  struct.EditCommand.html  struct.ExportDialogCommand.html  struct.FallbackCommand.html  struct.HelpCommand.html  struct.ImportDialogCommand.html  struct.NixOSExportDialogCommand.html  struct.PopupCommand.html  struct.PreviewDialogCommand.html  struct.QuitCommand.html  struct.ReloadDialogCommand.html  struct.SaveDialogCommand.html  struct.SearchCommand.html  struct.TabNavigationCommand.html  struct.VerticalNavigationCommand.html  trait.Command.html
docs/r_hyprconfig/config/: index.html  sidebar-items.js  struct.Config.html  struct.HyprlandConfigFile.html  struct.ParsedKeybind.html
docs/r_hyprconfig/errors/: enum.ConfigError.html  enum.FileError.html  enum.HyprConfigError.html  enum.HyprctlError.html  enum.RecoveryStrategy.html  index.html  sidebar-items.js  struct.RecoveryContext.html  type.ConfigResult.html  type.FileResult.html  type.HyprctlResult.html  type.Result.html
docs/r_hyprconfig/file_io/: index.html  sidebar-items.js  struct.FileOperationConfig.html  struct.FileOperations.html  struct.FileUtils.html
docs/r_hyprconfig/hyprctl/: index.html  sidebar-items.js  struct.AnimationsConfig.html  struct.CacheEntry.html  struct.CacheStats.html  struct.DecorationConfig.html  struct.GeneralConfig.html  struct.GesturesConfig.html  struct.HyprCtl.html  struct.HyprctlCache.html  struct.HyprlandConfig.html  struct.HyprlandKeybind.html  struct.InputConfig.html  struct.MiscConfig.html
docs/r_hyprconfig/import_export/: index.html  sidebar-items.js
docs/r_hyprconfig/import_export/export/: index.html  sidebar-items.js  struct.ConfigExporter.html
docs/r_hyprconfig/import_export/formats/: enum.ConfigFormat.html  index.html  sidebar-items.js  struct.AnimationSettings.html  struct.ConfigMetadata.html  struct.DecorationSettings.html  (+8 more)
docs/r_hyprconfig/memory/: fn.get_common_pools.html  fn.get_interner_stats.html  fn.intern_string.html  index.html  sidebar-items.js  static.COMMON_POOLS.html  static.STRING_INTERNER.html  struct.CommonPools.html  struct.CommonStrings.html  struct.InternerStats.html  struct.ObjectPool.html  struct.PoolStats.html  struct.PooledObject.html  struct.StringInterner.html
docs/r_hyprconfig/nixos/: enum.NixConfigType.html  index.html  sidebar-items.js  struct.NixConfigLocation.html  struct.NixOSConfig.html  struct.NixOSEnvironment.html
docs/r_hyprconfig/platform/: index.html  sidebar-items.js
docs/r_hyprconfig/state/: index.html  sidebar-items.js  struct.ApplicationState.html  struct.DialogState.html  struct.InteractiveState.html  struct.StateManager.html  struct.UIState.html
docs/r_hyprconfig/theme/: enum.ColorScheme.html  index.html  sidebar-items.js  struct.Theme.html
docs/r_hyprconfig/ui/: enum.BatchDialogMode.html  enum.ConfigDataType.html  enum.EditMode.html  enum.ExportFormatType.html  enum.ImportExportMode.html  enum.ImportSourceType.html  enum.KeybindField.html  enum.RuleField.html  enum.RuleType.html  index.html  sidebar-items.js  struct.ConfigItem.html  struct.ConfigItemFactory.html  struct.UI.html
docs/r_hyprconfig/undo/: index.html  sidebar-items.js  struct.ConfigSnapshot.html  struct.UndoManager.html
docs/search.desc/r_hyprconfig/: r_hyprconfig-desc-0-.js
docs/src/r_hyprconfig/: app.rs.html  batch.rs.html  commands.rs.html  config.rs.html  errors.rs.html  file_io.rs.html  hyprctl.rs.html  main.rs.html  memory.rs.html  state.rs.html  theme.rs.html  ui.rs.html  undo.rs.html
screenshots/: README.md
src/: app.rs  batch.rs  commands.rs  config.rs  errors.rs  file_io.rs  hyprctl.rs  main.rs  memory.rs  state.rs  theme.rs  ui.rs  undo.rs
src/import_export/: export.rs  formats.rs  import.rs  mod.rs
src/nixos/: config_discovery.rs  converter.rs  detection.rs  generator.rs  mod.rs  parser.rs
src/platform/: distribution.rs  mod.rs  paths.rs
templates/: default_hyprland.conf
(+108 files in other folders)
